@startuml

title __CURSJAVAFX's Class Diagram__\n


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.AddAnimalController {
          + choiceKindList : ChoiceBox<String>
          + date : DatePicker
          + idReglament : CheckBox
          + name : TextField
          + addAnimal()
          + backOnMain()
          + initialize()
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.AnimalController {
          + date_end : TableColumn<EventsAnimals, Date>
          + date_end_event : DatePicker
          + date_start : TableColumn<EventsAnimals, Date>
          + date_start_event : DatePicker
          + date_start_pills : DatePicker
          + days_pills : TableColumn<Pills, Integer>
          + eventTable : TableView<EventsAnimals>
          + id : TableColumn<EventsAnimals, Integer>
          + idLable : Label
          + id_pills : TableColumn<Pills, Integer>
          + name : TableColumn<EventsAnimals, String>
          + name_event : TextField
          + name_pills : TableColumn<Pills, String>
          + pillsTable : TableView<Pills>
          + prescribing : ChoiceBox<String>
          + addEvent()
          + addPills()
          + deleteEvent()
          + initialize()
          + setTable()
          + switchToMain()
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.CalendarController {
          + calendar : FlowPane
          + month : Text
          + year : Text
          ~ dateFocus : ZonedDateTime
          ~ today : ZonedDateTime
          + backOnMounth()
          + backToMain()
          + forwardOnMounth()
          + initialize()
          - createCalendarActivity()
          - drawCalendar()
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.HelloApplication {
          {static} + main()
          + start()
      }

  }
  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.LoginController {
          + login : TextField
          + password : TextField
          - regexLogin : String
          - regexPassword : String
          + login()
          # switchToRegPage()
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.MainController {
          + animalDateB : TableColumn<Animal, Date>
          + animalId : TableColumn<Animal, Integer>
          + animalKind : TableColumn<Animal, String>
          + animalName : TableColumn<Animal, String>
          + animalTable : TableView<Animal>
          + delete()
          + initialize()
          + openAddAnimal()
          + openAnimal()
          + openCalendar()
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.RegistrationController {
          + login : TextField
          + name : TextField
          + password : TextField
          - regexLogin : String
          - regexPassword : String
          + onMainButtonClick()
          + switchToLoginPage()
      }
    }

  


    namespace om.example.cursjavafx {
      class com.example.cursjavafx.SceneController {
          - root : Parent
          - scene : Scene
          - stage : Stage
          + switchScene()
      }
    }

  

  com.example.cursjavafx.AddAnimalController .up.|> javafx.fxml.Initializable
  com.example.cursjavafx.AddAnimalController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.AnimalController .up.|> javafx.fxml.Initializable
  com.example.cursjavafx.AnimalController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.CalendarController .up.|> javafx.fxml.Initializable
  com.example.cursjavafx.CalendarController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.HelloApplication -up-|> javafx.application.Application
  com.example.cursjavafx.LoginController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.MainController .up.|> javafx.fxml.Initializable
  com.example.cursjavafx.MainController o-- com.example.cursjavafx.database.PostgreDB : db
  com.example.cursjavafx.RegistrationController o-- com.example.cursjavafx.database.PostgreDB : db


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
